--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 </head>
 <body>
     <header>
-        <h1>Template</h1>
+        <h1>Titel project</h1>
     </header>
     <main>
-        <p>Main content here</p>
+        <p>Inhoud project</p>
     </main>
     <footer>
         &copy; 2021 WebBasics
