--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <h1>Titel project</h1>
+        <h1>Titel van het project</h1>
     </header>
     <main>
         <p>Inhoud project</p>
